--- a/style.css
+++ b/style.css
@@ -1382,8 +1382,8 @@ button,
     max-width: calc(25% - 15px);
 }
 .article img {
-    max-height: 430px
-    height: 100%;
+    height: fit-content;
+    width: 100%;
 }
 .date {
     color: #8F8F8F;
